Made some chnages

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    
+    <!-- ✅ Set the game title -->
+    <title>AI Runner Game</title>
+    
+    <!-- ✅ Add favicon (tab logo) -->
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
